# glicol_server

./: Cargo.toml  README.md
doc/: demo.gli
src/: glicol.rs  inp.rs  main.rs
